--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "investec-open-api",
+  "name": "investec-api",
   "version": "1.0.0",
   "description": "A Node module to interact with Investec's Open API",
   "main": "dist/index.js",
